[package]
name = "ywpl-auction"
version = "0.0.2"
description = "YWhales Auction Program"
authors = ["Ywhales"]
repository = "https://github.com/ywhales/ywhales-program-library"
license = "AGPL-3.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "~0.9.1"
num-derive = "~0.3"
num-traits = "~0.2"
arrayref = "~0.3.6"
solana-program = "~1.9.5"
spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
thiserror = "~1.0"

[dev-dependencies]
solana-program-test = "~1.9.5"
solana-sdk = "~1.9.5"

[lib]
crate-type = ["cdylib", "lib"]
